[gd_scene load_steps=10 format=3 uid="uid://4w3jdc6d616y"]

[ext_resource type="Script" uid="uid://do2qx6nm8dnum" path="res://scripts/work_scene_script.gd" id="1_clgo3"]
[ext_resource type="Script" uid="uid://chb3wjdh8jfij" path="res://scripts/moneyCounterScript.gd" id="1_eoja1"]
[ext_resource type="Texture2D" uid="uid://ccp3bykpnc34l" path="res://sprites/SanityBarUnder.png" id="1_jqjy7"]
[ext_resource type="Texture2D" uid="uid://c7xhg66yxv0q7" path="res://sprites/sanityBar.png" id="2_i6sgx"]
[ext_resource type="Script" uid="uid://blsgcxvh2pl53" path="res://scripts/sanityBar.gd" id="3_eoja1"]
[ext_resource type="Script" uid="uid://bf4ckjuh87st7" path="res://scripts/call_timer.gd" id="5_eoja1"]
[ext_resource type="PackedScene" uid="uid://bq6r3vur078ww" path="res://scenes/Telephone.tscn" id="5_io2gt"]
[ext_resource type="Script" uid="uid://cysj8q05h4did" path="res://scenes/target_bar_script.gd" id="7_7nxki"]
[ext_resource type="PackedScene" uid="uid://d2bcts6ujb2hd" path="res://scenes/Screen.tscn" id="9_2pybm"]

[node name="WorkScene" type="Node2D"]
script = ExtResource("1_clgo3")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="moneyCounterUI" type="Label" parent="Canvas"]
offset_left = 302.0
offset_top = 221.0
offset_right = 515.0
offset_bottom = 255.0
theme_override_font_sizes/font_size = 22
text = "Money: "
script = ExtResource("1_eoja1")

[node name="sanityBarUI" type="TextureProgressBar" parent="Canvas"]
offset_left = 37.0
offset_top = 657.0
offset_right = 1739.0
offset_bottom = 780.0
rotation = -1.5707964
scale = Vector2(0.28, 0.28)
value = 100.0
texture_under = ExtResource("1_jqjy7")
texture_progress = ExtResource("2_i6sgx")
script = ExtResource("3_eoja1")

[node name="Timer" type="Timer" parent="Canvas/sanityBarUI"]

[node name="label_target" type="Label" parent="Canvas"]
offset_left = 750.0
offset_top = 237.0
offset_right = 988.0
offset_bottom = 272.0
theme_override_font_sizes/font_size = 20
text = "This week's target :("

[node name="target_bar" type="TextureProgressBar" parent="Canvas"]
offset_left = 761.99994
offset_top = 280.99997
offset_right = 2464.0
offset_bottom = 403.99997
scale = Vector2(0.1, 0.1)
texture_under = ExtResource("1_jqjy7")
texture_progress = ExtResource("2_i6sgx")
script = ExtResource("7_7nxki")

[node name="Telephone" parent="." instance=ExtResource("5_io2gt")]
position = Vector2(1065, 160)

[node name="reduce_when_ring" type="Timer" parent="Telephone"]

[node name="call_timer" type="TextureProgressBar" parent="Telephone"]
offset_left = -713.0
offset_top = 393.0
offset_right = -182.0
offset_bottom = 421.0
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("1_jqjy7")
texture_progress = ExtResource("2_i6sgx")
script = ExtResource("5_eoja1")

[node name="sanity_reduction" type="Timer" parent="Telephone/call_timer"]

[node name="spawn_pos" type="Node2D" parent="Telephone"]
position = Vector2(-20, 350)

[node name="work_timer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="Screen" parent="." instance=ExtResource("9_2pybm")]
position = Vector2(592.00006, 313.00003)
scale = Vector2(0.388, 0.388)

[connection signal="timeout" from="Canvas/sanityBarUI/Timer" to="Canvas/sanityBarUI" method="_on_timer_timeout"]
[connection signal="call_notif" from="Telephone" to="." method="play_added_money"]
[connection signal="call_started" from="Telephone" to="Telephone/call_timer" method="_on_telephone_call_started"]
[connection signal="call_stopped" from="Telephone" to="Canvas/moneyCounterUI" method="addMoney"]
[connection signal="decrease_sanity" from="Telephone" to="Canvas/sanityBarUI" method="decreaseSanity"]
[connection signal="phone_ringing" from="Telephone" to="Canvas/sanityBarUI" method="new_affecting"]
[connection signal="timeout" from="Telephone/reduce_when_ring" to="Telephone" method="_on_reduce_when_ring_timeout"]
[connection signal="on_call" from="Telephone/call_timer" to="Canvas/sanityBarUI" method="new_affecting"]
[connection signal="reduce_sanity" from="Telephone/call_timer" to="Canvas/sanityBarUI" method="decreaseSanity"]
[connection signal="timeout" from="Telephone/call_timer/sanity_reduction" to="Telephone/call_timer" method="_on_sanity_reduction_timeout"]
[connection signal="timeout" from="work_timer" to="." method="_on_work_timer_timeout"]
[connection signal="decrease_sanity" from="Screen" to="Canvas/sanityBarUI" method="decreaseSanity"]
[connection signal="gain_money" from="Screen" to="Canvas/moneyCounterUI" method="addMoney"]
[connection signal="money_notification" from="Screen" to="." method="play_added_money"]
[connection signal="new_decreaser" from="Screen" to="Canvas/sanityBarUI" method="new_affecting"]
